apps/pihole/pihole.service.tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-tcp
spec:
  externalTrafficPolicy: Local
  ports:
  - name: pihole-http
    port: 8000
    protocol: TCP
    targetPort: 80
  - name: pihole-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: dns
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    app: pihole
  sessionAffinity: None
  externalIPs:
  - 192.168.1.101
---
