apps/pihole/pihole.service.udp.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-udp
spec:
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: client-udp
    port: 67
    protocol: UDP
    targetPort: 67
  selector:
    app: pihole
  sessionAffinity: None
  externalIPs:
  - 192.168.1.101
---
